<resources>
    <string name="app_name">Finger Flinger</string>

    <string name="app_name_front">Finger</string>
    <string name="app_name_end">Flinger</string>

    <string name="main_start">Start</string>
    <string name="main_scores">Scores</string>
    <string name="main_wear">Play on watch</string>

    <string name="paused">Paused</string>

    <string name="game_over">Game Over</string>
    <string name="score_text">You scored %s points</string>
    <string name="score_text_single">You scored 1 point</string>


    <string name="confirmation_dialog">Are you sure?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="quit_button">Quit</string>
    <string name="resume_button">Resume</string>
    <string name="ok_button">OK</string>

    <string name="game_mode_options">Choose a game mode</string>
    <string name="mode_infinite">Infinite Lives</string>
    <string name="mode_time_attack">Time Attack</string>
    <string name="mode_normal">Normal</string>
    <string name="mode_fast">Fast Mode</string>

    <string name="anim_mode_options">Choose an animation mode</string>
    <string name="mode_normal_anim">Normal</string>
    <string name="mode_wacky">Wacky</string>
    <string name="mode_easy">Easy</string>
    <string name="mode_none">None</string>
</resources>
