<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDefault"
    tools:context=".ui.MainActivity"
    android:id="@+id/mainActivity">

    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainActivityAnimation"
        android:layout_gravity="center"
        android:autoStart="false" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/arrow_right_white"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/arrow_left_white"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/arrow_down_white"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/arrow_up_white"/>

    </ViewFlipper>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/mainTitle1"
            android:text="@string/app_name_front"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/mainTitle2"
            android:layout_marginEnd="200dp"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/mainTitle2"
            android:text="@string/app_name_end"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="35dp"
            android:layout_marginStart="20dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainMenuOptions"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center">

        <TextView
            android:id="@+id/mainScoresButton"
            android:padding="10dp"
            android:text="@string/main_scores"
            android:textAlignment="center"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main_buttons"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/mainStartButton"
            android:textSize="30sp"
            android:padding="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_main_buttons"
            android:text="@string/main_start"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/mainScoresButton"/>

        <TextView
            android:visibility="invisible"
            android:id="@+id/mainWearButton"
            android:padding="10dp"
            android:text="@string/main_wear"
            android:textAlignment="center"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main_buttons"
            android:layout_toEndOf="@id/mainStartButton"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

</FrameLayout>
